# ur-mavdiscovery

./: .gitmodules  CMakeLists.txt  cmake_uninstall.cmake.in
config/: mavdiscovery-config.json  ur-mavdiscovery-topics.json  ur-rpc-generic-topics.json
spec/: cssl.c  cssl.h  libmavlink.c  libmavlink.h  ur-discovery.c  ur-discovery.h
src/: main.c
